# cvte-project

./: README.md
assets/: 功能需求.pptx  实习答辩.pptx
serial_port_lower/: CMakeLists.txt  README.md  main.c
serial_port_lower/config/: config.json
serial_port_lower/lib/lib_cJSON/: libcjson.so.1
serial_port_lower/src/: common.h  json.c  json.h  protocols.c  protocols.h  serial_port.c  serial_port.h
serial_port_upper/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
